# PotatoInSpace

./: .gitignore  CMakeLists.txt  README.md  project.json  project.json.bak0
Assets/Inputs/: jetFighterController.inputbindings
Assets/Materials/: Bullet.material
Assets/Models/FighterJet/: JetFighterLP.fbx  JetFighterLP.fbx.assetinfo  JetFighterLP_body.001.material
Assets/Models/Potato/: Potato.fbx  Potato.fbx.assetinfo  (+1 more)
Assets/Prefabs/: Bullet.prefab  FighterJet.prefab  LittlePotato.prefab  PotatoBoss.prefab
Assets/ScriptEvents/: GameControls.scriptevents
Assets/UI/: CharCreation.uicanvas  Credits.uicanvas  InGame.uicanvas  Intro.uicanvas  LoadingScreen.scriptcanvas  LoadingScreen.uicanvas  MainScript.scriptcanvas  akey.inputbindings  potato.xcf
Gem/: CMakeLists.txt  enabled_gems.cmake  gem.json  potatoinspace_files.cmake  potatoinspace_shared_files.cmake
Gem/Registry/: assetprocessor_settings.setreg
Gem/Source/: PotatoInSpaceModule.cpp  PotatoInSpaceSystemComponent.cpp  PotatoInSpaceSystemComponent.h
Levels/Game/: Game.prefab
Levels/TS_Controller/: TS_Controller.prefab
Levels/Test/: Test.prefab
Levels/q1/: q1.prefab
Platform/Android/: android_project.json
Prefabs/: PrefabTest.prefab
Registry/: physxsystemconfiguration.setreg
scriptcanvas/: AngleBetweenTwoVectors.scriptcanvas  BulletScript.scriptcanvas  BulletScriptLight.scriptcanvas  BulletScriptUpdated.scriptcanvas  CameraScript.scriptcanvas  FighterJetControllere.scriptcanvas  LittlePotatoScript.scriptcanvas  PotatoScript.scriptcanvas  SimluateStartGame.scriptcanvas  Test.scriptcanvas
(+4 files in other folders)
